# ygo-draft-master

./: .gitignore  LICENSE.txt  README.md  notes.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/card/: mod.rs  response_card.rs  ygo_card.rs
backend/src/db/: mod.rs
