[package]
name = "ygo-draft-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["blocking", "json", "query"] }
rusqlite = "0.40.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
tokio = "1.52.3"
tracing = "0.1.44"

[dev-dependencies]
http = "1.4.2"
