[package]
name = "ygo-draft-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
rand = "0.10.2"
reqwest = { version = "0.13.4", features = ["blocking", "json", "query"] }
serde = { version = "1.0.229", features = ["derive", "rc"] }
serde_json = "1.0.151"
sqlx = { version = "0.9.0", features = ["sqlite"] }
tokio = "1.53.1"
tracing = "0.1.44"

[dev-dependencies]
http = "1.4.2"
